--- a/schedule.html
+++ b/schedule.html
@@ -36,7 +36,7 @@
         <div class="artist-container">
             
             <div class="artist">
-                <input type="radio" id="artist1" name="artist" value="juicy_luicy" required>
+                <input type="radio" id="artist1" name="artist" value="Juicy Luicy" required>
                 <label for="artist1">
                     <img src="images/juicy_luicy_image.jpg.jpg" alt="Juicy Luicy">
                 </label>
@@ -53,7 +53,7 @@
             </div>
             
             <div class="artist">
-                <input type="radio" id="artist3" name="artist" value="nadin_amizah" required>
+                <input type="radio" id="artist3" name="artist" value="Nadin Amizah" required>
                 <label for="artist3">
                     <img src="images/nadin_amizah_image.jpg" alt="Nadin Amizah">
                 </label>
